# backup-repository

./: .SRCINFO  .bowerrc  .dockerignore  .env  .env.dist  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.x86_64  Dockerfile.x86_64-sentry  Dockerfile.x86_64_postman  Dockerfile_bahub.x86_64  Makefile  PKGBUILD  Pipfile  README.md  SECURITY.md  app.json  appveyor.yml  bower.json  codeception.yml  composer.json  deploy-to-ftp.sh  env.mk  filerepository.php.ini  go.mod  go.sum  k8s.mk  main.go  nginx.conf  package-lock.json  package.json  phinx.php  phinx.yml  phploy.ini-example  phpunit.xml.dist  postman-tests.json  postman.ci-environment.json  (+9 more)
bahub/: .dockerignore  .gitignore  Pipfile  README.md  bahub.conf.yaml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
bahub-client/: .dockerignore  ChangeLog  Makefile  Pipfile  README.md  bahub-dev.sh  configuration.yaml.dist  requirements.txt  setup.cfg  setup.py  supervisord.conf
bahub-client/.infrastructure/: Dockerfile_bahub.x86_64  docker_bahub.sh  docker_entrypoint.sh
bahub-client/bahub/bahubapp/: exceptions.py
bahub-client/bahub/bahubapp/controller/: backup.py
bahub-client/bahub/bahubapp/entity/: definition.py  recovery.py
bahub-client/bahub/bahubapp/handler/: __init__.py  abstractdocker.py  commandoutputbackup.py  dockeroutputbackup.py  dockervolumebackup.py  localfilebackup.py  mysqlbackup.py  postgresbackup.py
bahub-client/bahub/bahubapp/mapping/: definitions.py  handlers.py
bahub-client/bahub/bahubapp/service/: client.py  (+4 more)
bahub-client/tests/: README.md  bahub-test.conf.yaml  cron  docker-compose.yaml  init.sh  run.sh
bahub-client/tests/cases/: 001_basic_backup_and_restore.sh
bahub-client/tests/conf/: without_crypto.conf.yaml
bahub-client/tests/functional/: __init__.py  test_basic_backup_and_restore.py
bahub-client/tests/unit/: test_access.py  test_definition_factory.py  test_encryption.py  test_handlers.py  test_recovery_plan.py
bahub/.rkd/: makefile.py
bahub/.rkd/ci/: docker-compose.yml
bahub/.rkd/docker/: .jobber  Dockerfile  entrypoint.sh
bahub/bahub/: __init__.py  __main__.py  api.py  bin.py  configurationfactory.py  encryption.py  env.py  exception.py  fs.py  importing.py  inputoutput.py  model.py  notifier.py  notifiers.py  response.py  schema.py  security.py  settings.py  versions.py
bahub/bahub/adapters/: __init__.py  base.py  filesystem.py  mysql.py  postgres_dump.py  postgres_dump.py.disabled
bahub/bahub/internal/: makefile.py
bahub/bahub/tasks/: __init__.py  base.py  cryptsetup.py  docs.py  prepare.py  restore.py  uploader.py
bahub/bahub/transports/: __init__.py  all.py  base.py  docker.py  kubernetes.py  kubernetespodexec.py  sh.py  sidedocker.py  temporarydocker.py
bahub/test/: test_configurationfactory.py  test_encryption.py  test_importing.py  test_inputoutput.py  test_schema.py  test_security.py  test_transports_docker.py  test_transports_sh.py  test_transports_temporarydocker.py
kropot-cli/: DESCRIPTION.rst  Makefile  README.md  setup.cfg  setuptools-requirements.txt
kropot-cli/.infrastructure/: Dockerfile.x86_64
kropot-cli/src/kropotcli/: __init__.py  app.py  httpclient.py  logger.py  persistance.py  tests.py
kropot-cli/tests/unit/: test_storage.py
little-copy-machine-client/: Makefile  README.md  setup.cfg  setup.py
little-copy-machine-client/.infrastructure/: Dockerfile.x86_64
(+1846 files in other folders)
