[metadata]
name = bahub
author = RiotKit Collective
author_email = marek_andrzejczak@riseup.net
summary = Bahub is a File Repository API client that allows to totally automate the backups on your server
license = MIT
description-file = README.md
home-page = https://github.com/riotkit-org/file-repository
python_requires = >=3.6
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
    Topic :: System :: Systems Administration

[files]
packages = bahub
data_files =
    local/etc/bahub/ = ./configuration.yaml.dist

[entry_points]
console_scripts =
    bahub = bahub:main
