[metadata]
name = bahub
author = RiotKit Collective
author_email = riotkit@riseup.net
summary = Fully automated backup & restore application, with E2E encryption. Stores backups on Backup Repository server or saves into file
license = MIT
description-file = README.md
home-page = https://github.com/riotkit-org/backup-repository
python_requires = >=3.9
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
    Topic :: System :: Systems Administration

[files]
packages = bahub
packages_root = ./
data_files =
    local/etc/bahub/ = ./bahub.conf.yaml

[entry_points]
console_scripts =
    bahub = bahub:main
