[metadata]
name = kropotcli
author = RiotKit Collective
author_email = riotkit_org@riseup.net
summary = Performs a streamed mirror of files from remote File Repository server instance
license = MIT
description-file = DESCRIPTION.rst
home-page = https://github.com/riotkit-org/file-repository
python_requires = >=3.6
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
    Topic :: System :: Systems Administration

[files]
packages = kropotcli
packages_root = src

[entry_points]
console_scripts =
    kropotcli = kropotcli:main
